<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_1_short"
                android:id="@+id/manifesto_princ_1_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_2_short"
                android:id="@+id/manifesto_princ_2_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_3_short"
                android:id="@+id/manifesto_princ_3_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_4_short"
                android:id="@+id/manifesto_princ_4_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_5_short"
                android:id="@+id/manifesto_princ_5_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_6_short"
                android:id="@+id/manifesto_princ_6_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_7_short"
                android:id="@+id/manifesto_princ_7_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_8_short"
                android:id="@+id/manifesto_princ_8_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_9_short"
                android:id="@+id/manifesto_princ_9_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_10_short"
                android:id="@+id/manifesto_princ_10_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_11_short"
                android:id="@+id/manifesto_princ_11_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>

        <TextView
                style="@style/BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manifesto_princ_12_short"
                android:id="@+id/manifesto_princ_12_short"
                android:gravity="center"
                android:paddingTop="20sp"
                android:clickable="true"/>
    </LinearLayout>
</ScrollView>