<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manifesto_value_ind"
            android:id="@+id/manifesto_value_ind"
            android:gravity="center"
            android:paddingTop="20sp"
            android:clickable="true"/>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#0f050a"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"/>

    <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manifesto_value_wor"
            android:id="@+id/manifesto_value_wor"
            android:gravity="center"/>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#0f050a"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"/>

    <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manifesto_value_cus"
            android:id="@+id/manifesto_value_cus"
            android:gravity="center"/>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#0f050a"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"/>

    <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manifesto_value_res"
            android:id="@+id/manifesto_value_res"
            android:gravity="center"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Toaster"
            android:id="@+id/toast_button"
            android:layout_gravity="center"/>

</LinearLayout>
